# out-of-tree-builds

./: .gitignore  Jenkinsfile  README.md
.github/workflows/: APItrigger.yml  annotatePR.yml  auto merge.yml  basebranch.yml  compose-merge-commit.yml  cppcheck.yml  keep-alive-test.yml  keep-alive.yml  main.yml  test-edit-statuses.yml  test-queuing.yml  (+1 more)
projects/: CMakeLists.txt  PrintVariables.cmake
projects/Array_Template_Classes/: CMakeLists.txt  array_template_classes.cpp  array_template_classes.h
projects/Array_Template_Classes/unittest/: CMakeLists.txt  array_template_classesUT.cpp
projects/Challenges/: CMakeLists.txt
projects/Challenges/Challenge_1/: CMakeLists.txt  main.cpp
projects/Challenges/Challenge_2/: CMakeLists.txt  main.cpp
projects/Challenges/Challenge_3/: CMakeLists.txt  main.cpp
projects/Challenges/Challenge_4/: CMakeLists.txt  main.cpp
projects/Challenges/STD_deque/: main.cpp
projects/Challenges/STD_list/: CMakeLists.txt  Person.h
projects/Challenges/STD_map/: main.cpp
projects/Challenges/STD_queue/: main.cpp
projects/Challenges/STD_set/: main.cpp
projects/Class_Templates/src/: CMakeLists.txt  class_templates.cpp  class_templates.h
projects/Function_Templates/src/: CMakeLists.txt  function_templates.cpp
projects/Lambdas/: CMakeLists.txt  predicate_lambda.cpp
projects/STD_containers/: std_vector.cpp
projects/STD_stack/: std_stack.cpp
projects/STL_examples/: CMakeLists.txt
projects/STL_examples/STL_containers/: CMakeLists.txt  std_array.cpp
projects/STL_examples/STL_iterators/: stl_iterators_containers.cpp
projects/STL_examples/STL_list/: main.cpp
projects/STL_examples/STL_map/: CMakeLists.txt
projects/STL_examples/STL_queue/: CMakeLists.txt  main.cpp
projects/STL_examples/STL_set/: CMakeLists.txt
projects/STL_examples/STL_stack/: CMakeLists.txt
projects/STL_iterators/: CMakeLists.txt  stl_iterators.cpp
projects/Section_13/src/: CMakeLists.txt  Movie.cpp  Movie.h  Movies.cpp  Movies.h  main.cpp
(+1 files in other folders)
